[webinterface.awxi] updated to 0.5.2

--- a/webinterface.awxi/ui.default/css/layout.css
+++ b/webinterface.awxi/ui.default/css/layout.css
@@ -461,7 +461,14 @@ div.linkTVLogoWrapper {
     position: absolute;
     width: 90%;
 }
-div.logoWrapper:hover div.linkTVLogoWrapper, div.thumbEpWrapper:hover div.linkEpWrapper {
+div.linkArtistWrapper {
+    display: none;
+    left: 7px;
+	top: 7px;
+    position: absolute;
+    width: 90%;
+}
+/*div.logoWrapper:hover div.linkTVLogoWrapper, div.thumbEpWrapper:hover div.linkEpWrapper {
     display: block;
 }
 div.thumbWrapper:hover div.linkTVWrapper {
@@ -469,7 +476,7 @@ div.thumbWrapper:hover div.linkTVWrapper {
 }
 div.thumbWrapper:hover div.linkWrapper {
 	display: block;
-}
+}*/
 
 div.thumbWrapper a { display: block; }
 
@@ -506,6 +513,12 @@ img.thumb {
 	border: 2px solid #575757;
 	height: 125px;
 	width: 125px;
+}
+img.thumbAlbums {
+	-moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px;
+	border: 2px solid #575757;
+	height: 200px;
+	width: 200px;
 }
 img.epWatched {
 	position:relative; 
@@ -832,7 +845,16 @@ div.mkfOverlay div.dialog span.label {
 	font-weight: bold;
 	margin-right: 10px;
 }
-
+div.mkfOverlay div.dialog span.labelinfo {
+    float: left;
+    font-weight: bold;
+    margin-right: 10px;
+    width: 245px;
+}
+div.mkfOverlay div.dialog p.artistdesc {
+    clear: both;
+    /*padding-top: 15px;*/
+}
 div.mkfOverlay div.dialog span.value,
 div.mkfOverlay div.dialog span.valuePoster,
 div.mkfOverlay div.dialog span.valueBanner {
