--- a/webinterface.awxi/ui.light/css/layout.css
+++ b/webinterface.awxi/ui.light/css/layout.css
@@ -197,9 +197,14 @@ ul.mkfPageContextMenu li {
 	background: url('../images/loading.gif') no-repeat top left;
 }
 img.thumb {
-	border: 1px solid #575757;
+	/*border: 1px solid #575757;*/
 	height: 125px;
 	width: 125px;
+}
+img.thumbAlbums {
+	border: 1px solid #575757;
+	height: 200px;
+	width: 200px;
 }
 img.epWatched {
 	position:relative; 
@@ -292,7 +297,14 @@ div.linkTVLogoWrapper {
     position: absolute;
     width: 90%;
 }
-div.logoWrapper:hover div.linkTVLogoWrapper, div.thumbEpWrapper:hover div.linkEpWrapper {
+div.linkArtistWrapper {
+    display: none;
+    left: 7px;
+	top: 10px;
+    position: absolute;
+    width: 90%;
+}
+/*div.logoWrapper:hover div.linkTVLogoWrapper, div.thumbEpWrapper:hover div.linkEpWrapper {
     display: block;
 }
 div.thumbWrapper:hover div.linkTVWrapper {
@@ -300,7 +312,7 @@ div.thumbWrapper:hover div.linkTVWrapper {
 }
 div.thumbWrapper:hover div.linkWrapper {
 	display: block;
-}
+}*/
 
 div.thumbWrapper a {
 	display: block;
@@ -424,7 +436,16 @@ div.mkfOverlay div.dialog span.label {
 	font-weight: bold;
 	margin-right: 10px;
 }
-
+div.mkfOverlay div.dialog span.labelinfo {
+    float: left;
+    font-weight: bold;
+    margin-right: 10px;
+    width: 245px;
+}
+div.mkfOverlay div.dialog p.artistdesc {
+    clear: both;
+    /*padding-top: 15px;*/
+}
 div.mkfOverlay div.dialog span.value,
 div.mkfOverlay div.dialog span.valuePoster,
 div.mkfOverlay div.dialog span.valueBanner {
