--- a/webinterface.awxi/ui.uni/css/layout.css
+++ b/webinterface.awxi/ui.uni/css/layout.css
@@ -14,12 +14,13 @@ h2 {
 }
 #header {
   /*background: url("../images/logo.png") no-repeat scroll 20px 10px #333333;*/
-  background-color: rgba(0,0,0,0.6);
+  background-color: rgba(0,0,0,0.7);
   min-width: 600px; 
   !important; width: 600px;
   position: absolute;
   width: 100%;
   height: 48px;
+  z-index: 35;
   /*padding-left: 145px;*/
 }
 #navigation {
@@ -29,7 +30,7 @@ h2 {
   position: absolute;
   top: 110px;
   width: 100%;*/
-  z-index: 5;
+  z-index: 22;
 }
 #navigation ul.mkfMenu, ul.systemMenu, ul.mkfPageContextMenu {
   list-style-type: none;
@@ -213,13 +214,14 @@ ul.systemMenu > li.mouseover > a .exit, ul.systemMenu > li.activeMenuItem > a .e
   background-position: -144px 0px;
 }
 #footer {
-  background-color: rgba(0,0,0,0.6);
+  background-color: rgba(0,0,0,0.7);
   min-width: 600px; 
   !important; width: 600px;
   position: absolute;
   bottom: 0;
   width: 100%;
   height: 48px;
+  z-index: 35;
 }
 
 #infoContainer {
@@ -345,6 +347,7 @@ span.artist {
 span.label {
   color: #A0E312;
   font-size: 1em;
+  margin-right: 3px;
 }
 span.time {
   color: #EEE;
@@ -618,7 +621,44 @@ ul.mkfPageContextMenu li {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  z-index: 5;
 }
+#firstBG {
+  z-index: 4;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  min-width: 600px;
+  overflow: hidden;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  -webkit-transition: opacity 3s ease-in-out;
+  -moz-transition: opacity 3s ease-in-out;
+  -o-transition: opacity 3s ease-in-out;
+  transition: opacity 3s ease-in-out;
+}
+#secondBG {
+  z-index: 3;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  min-width: 600px;
+  overflow: hidden;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.transparent {
+  opacity: 0;
+}
+
 #content {
   bottom: 48px;
   left: 0;
@@ -628,13 +668,26 @@ ul.mkfPageContextMenu li {
   position: absolute;
   right: 0;
   top: 48px;
-  z-index: 50;
+  z-index: 15;
   background-image: url("");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
   /*background-position: 0px 168px;*/
 }
+
+#background div.controls {
+  top: 96px;
+  bottom: 96px;
+  left: 48px;
+}
+
+#background div.controlsPinned {
+  top: 96px;
+  bottom: 96px;
+  left: 48px;
+}
+
 #content .mkfPage .pageContent div.pageContentWrapper {
   min-height: 32px;
 }
@@ -725,9 +778,21 @@ img.epWatched {
   border-width: 0;
   height: 280px;
 }*/
-div.thumbWrapper, div.logoWrapper {
+div.thumbWrapper {
   /*background-color: rgba(0,0,0,0.8);
   border: 1px solid #D8D8D8;*/
+  float: left;
+  height: 185px;
+  margin: 5px;
+  overflow: hidden;
+  padding: 5px;
+  position: relative;
+  text-align: center;
+  width: 129px;
+}
+div.logoWrapper {
+  background-color: rgba(0,0,0,0.6);
+  /*border: 1px solid #D8D8D8;*/
   float: left;
   height: 185px;
   margin: 5px;
@@ -746,7 +811,7 @@ div.thumbBannerWrapper {
   width: 383px;
 }
 div.thumbLogoWrapper {
-  height: 133px;
+  height: 140px;
   width: 300px;
 }
 div.thumbFullLogoWrapper {
@@ -873,9 +938,9 @@ div.findKeywords {
 }
 div.playtime {
   background-color: rgba(0,0,0,0.8);
-  width: 13%;
+  width: 17%;
   color: #fff;
-  font-size: 12px;
+  font-size: 1.3em;
   font-weight: bold;
   text-align: center;
   border-radius: 3px 3px 3px 3px;
@@ -952,7 +1017,7 @@ div.mkfOverlay div.dialog span.labelinfo {
 }
 div.mkfOverlay div.dialog p.artistdesc {
   clear: both;
-  height: 200px;
+  max-height: 200px;
   overflow-y: auto;
 }
 div.mkfOverlay div.dialog span.value, div.mkfOverlay div.dialog span.valuePoster, div.mkfOverlay div.dialog span.valueBanner {
@@ -968,6 +1033,9 @@ div.mkfOverlay div.dialog span.valueBanner {
 }
 div.mkfOverlay div.dialog h1.underline {
   text-decoration: underline;
+}
+div.mkfOverlay div.dialog h1.center {
+  text-align: center;
 }
 div.mkfOverlay div.dialog div.test {
   clear: right;
@@ -1514,21 +1582,41 @@ ul.fileList {
   margin: 0;
   padding: 0;
 }
-div.singleView {
-  vertical-align: middle;
+div.singleMovie, div.singleView {
   display: table;
   margin-left:auto;
   margin-right:auto;
 }
-div.singleView div.prev {
+div.movieTitle, div.albumArtist, div.tvshowTitle {
+  background-color: rgba(0,0,0,0.8);
+  padding: 3px;
+  border-radius: 3px 3px 3px 3px;
+}
+div.movieTitle span.label, div.albumArtist span.label, div.tvshowTitle span.label {
+  color: #fff;
+  font-size: 1.2em;
+  vertical-align: middle;
+}
+div.movieTitle span.label img, div.tvshowTitle span.label img {
+  vertical-align: middle;
+  margin-left: 5px;
+}
+div.singleMovie div.prev, div.singleView div.prev {
+  display: inline-block;
+  vertical-align: middle;
   width: 48px;
   height: 48px;
   background-image: url("../images/scroll-left.png");
 }
-div.singleView div.next {
+div.singleMovie div.next, div.singleView div.next {
+  display: inline-block;
+  vertical-align: middle;
   width: 48px;
   height: 48px;
   background-image: url("../images/scroll-right.png");
+}
+div.singleMovie .imgPoster, div.singleView img.artist {
+  vertical-align: middle;
 }
 #multiOpenAccordion {
   background-attachment: fixed;
@@ -1643,8 +1731,8 @@ p.loading {
   background: url('../../images/dialog_loading.gif') no-repeat left center; 
 }
 ul.fileList li {
-  /*height: 48px;*/
-  font-size: 15px;
+  min-height: 51px;
+  font-size: 1.3em;
   background-color: rgba(0,0,0,0.7);
   border-bottom: 1px solid #ABABAB;
   display: block;
@@ -1655,37 +1743,48 @@ ul.fileList li.even {
 ul.fileList li.current {
   background-color: #FF0000;
 }
+ul.fileList span.label {
+  color: #ddd;
+  float: left;
+  margin-left: 3px;
+  padding: 1.2% 5px;
+  text-decoration: none;
+  vertical-align: middle;
+}
 ul.fileList a {
   color: #ddd;
   display: block;
-  padding: 17px 5px;
+  padding: 1.3% 5px;
   text-decoration: none;
 }
-ul.fileList li a:hover {
-  background-color: #888888;
+ul.fileList li:hover {
+  background-color: #888;
 }
 div.folderLinkWrapper a.button {
   float: left;
-  padding: 2px;
+  display: inline-block;
+  padding: 0px;
+  height: 48px;
+  vertical-align: middle;
 }
 div.folderLinkWrapper a.button:hover {
   background-color: transparent;
 }
-div.folderLinkWrapper a.song, div.folderLinkWrapper a.playlistItem, div.folderLinkWrapper a.episode {
+/*div.folderLinkWrapper a.song, div.folderLinkWrapper a.playlistItem, div.folderLinkWrapper a.episode {
   padding-left: 60px;
 }
 div.folderLinkWrapper a.folder, div.folderLinkWrapper a.file {
   padding-left: 60px;
-}
-div.folderLinkWrapper a.playlistItemCur {
+}*/
+div.folderLinkWrapper a.playlistItemCur, div.folderLinkWrapper span.playlistItemCur {
   color: #fff;
   font-weight: bold;
   /*padding: 10px 35px;*/
 }
 span.miniIcon {
   background: url("../images/mini_buttons.png") no-repeat scroll 0 0 transparent;
-  float: left;
-  display: block;
+  /*float: left;*/
+  display: inline-block;
   height: 48px;
   width: 48px;
 }
@@ -1853,6 +1952,7 @@ div.recentTVshowName {
   margin-top: 3px;
   font-size: 150%; 
   font-weight: bold;
+  color: #599CFF;
   display: block;
 }
 div.recentTVtitle {
@@ -1898,6 +1998,7 @@ div.episodeTitle {
 }
 div.episodeTVSE {
   font-size: 15px;
+  color: #fff;
   display: block;
 }
 div.episodeRating {
@@ -2089,7 +2190,7 @@ br.clear {
 #content .mkfMenu {
   list-style-type: none;
   margin: 0 auto;
-  padding: 0;
+  padding: 10px 0px;
   width: 552px;
 }
 #content .mkfMenu li a {
@@ -2259,7 +2360,7 @@ a.music_sub.artist:hover {
   background-position: -48px 0;
 }
 #displayoverlaytop {
-  /*background-color: rgba(25,25,25,0.8);*/
+  background-color: rgba(0,0,0,0.7);
   /*-moz-border-radius: 10px 0px 0 0; -webkit-border-radius: 10px 0px 0 0; border-radius: 10px 0px 0 0;
   border-top: 1px solid #555555;
   border-left: 1px solid #555555;*/
@@ -2271,31 +2372,46 @@ a.music_sub.artist:hover {
   top: 48px;
   float: left;
   /*right: 20px;*/
-  z-index: 250;
+  z-index: 25;
+}
+#displayoverlayleft {
+  background-color: rgba(0,0,0,0.7);
+  bottom: 96px;
+  left: 0;
+  width: 48px;
+  overflow: hidden;
+  /*padding-top: 5px;*/
+  position: absolute;
+  right: 0;
+  top: 96px;
+  z-index: 25;
+  /*position: fixed;
+  bottom: 48px;
+  left: 5px;
+  z-index: 50;
+  height: 100%;*/
 }
 #displayoverlaybot {
-  /*background-color: rgba(25,25,25,0.8);
-  border-radius: 10px 0px 0 0;
+  background-color: rgba(0,0,0,0.7);
+  /*-moz-border-radius: 10px 0px 0 0; -webkit-border-radius: 10px 0px 0 0; border-radius: 10px 0px 0 0;
   border-top: 1px solid #555555;
-  border-left: 1px solid #555555;
-  margin-right: 20px;*/
+  border-left: 1px solid #555555;*/
   position: fixed;
   /*padding: 10px 0px 0px 10px;*/
-  height: 110px;
+  height: 48px;
   width: 100%;
   min-width: 600px;
   bottom: 48px;
-  /*float: right;
-  right: 0px;*/
-  left:  0px;
-  z-index: 250;
+  float: left;
+  /*right: 20px;*/
+  z-index: 25;
 }
 #artwork {
   height: 288px;
   width: 260px;
   /*float: left;*/
   margin-right: 20px;
-  margin-top: -179px;
+  margin-top: -240px;
   /*position: absolute;
   bottom: 48px;
   right: 0px;*/
@@ -2307,18 +2423,29 @@ a.music_sub.artist:hover {
   height: 280px;
   margin-left: 70px;
 }
+div#artwork a.artclose {
+  background: url("../images/context_buttons_small.png") no-repeat scroll left top transparent;
+  position: absolute;
+  right: 25px;
+  bottom: 10px;
+  height: 22px;
+  width: 22px;
+}
+div#artwork a.artclose:hover {
+  background-position: left bottom;
+}
 #controls {
   min-width: 600px;
-  position: fixed;
+  /*position: fixed;*/
 }
 #controls #quick {
-  background-color: rgba(55,55,55,0.9);
+  /*background-color: rgba(55,55,55,0.9);
   border-radius: 5px 5px 5px 5px;
   height: 48px;
   margin-top: 55px;
-  /*width: 264px;*/
+  width: 264px;
   float: left;
-  z-index: 250;
+  z-index: 250;*/
 }
 #inputcontrols {
   background-color: rgba(55,55,55,0.9);
@@ -2460,6 +2587,88 @@ a.music_sub.artist:hover {
 /*#displayoverlaybot .menucontrols a:hover.input {
   background-position: -528px 0;
 }*/
+/*Input 24px*/
+#inputcontrols24 a.button {
+  background: url("../images/input_24.png") no-repeat scroll 0 0 transparent;
+  float: left;
+  height: 24px;
+  width: 24px;
+}
+#inputcontrols24 a.home {
+  background-position: -144px 0;
+}
+#inputcontrols24 a.left {
+  background-position: -24px 0;
+}
+#inputcontrols24 a.up {
+  background-position: -72px 0;
+}
+#inputcontrols24 a.right {
+  background-position: -48px 0;
+  margin-right: 0;
+}
+#inputcontrols24 a.down {
+  background-position: -96px 0;
+}
+#inputcontrols24 a.back {
+  background-position: -168px 0;
+  margin-right: 0;
+}
+#inputcontrols24 a.select {
+  background-position: -120px 0;
+}
+#inputcontrols24 a.info {
+  background-position: 0px 0;
+}
+#inputcontrols24 a.contextMenu {
+  background-position: -192px 0;
+  margin-right: 0;  
+}
+
+/*Input 32px*/
+div#controlsInput32 {
+  height: 32px;
+  margin-top: 8px;
+  margin-right: 5px;
+  display: inline-block;
+}
+#inputcontrols32 a.button {
+  background: url("../images/input32.png") no-repeat scroll 0 0 transparent;
+  float: left;
+  height: 32px;
+  width: 32px;
+}
+#inputcontrols32 a.home {
+  background-position: -256px 0;
+}
+#inputcontrols32 a.left {
+  background-position: -96px 0;
+}
+#inputcontrols32 a.up {
+  background-position: -128px 0;
+}
+#inputcontrols32 a.right {
+  background-position: -64px 0;
+  margin-right: 0;
+}
+#inputcontrols32 a.down {
+  background-position: -32px 0;
+}
+#inputcontrols32 a.back {
+  background-position: -224px 0;
+  margin-right: 0;
+}
+#inputcontrols32 a.select {
+  background-position: 0 0;
+}
+#inputcontrols32 a.info {
+  background-position: -192px 0;
+}
+#inputcontrols32 a.contextMenu {
+  background-position: -160px 0;
+  margin-right: 0;  
+}
+
 #inputcontrols a.button {
   background: url("../images/quick_controls.png") no-repeat scroll 0 0 transparent;
   float: left;
@@ -2574,36 +2783,120 @@ a.music_sub.artist:hover {
 #controls #quick_con a.mute {
   background-position: -384px 0;
 }
-/*#controls a.play:hover {
-  background-position: -90px -30px;
+
+/*player 24px*/
+#playercontrols24 a.button {
+  background: url("../images/player24.png") no-repeat scroll 0 0 transparent;
+  float: left;
+  height: 24px;
+  /*margin-right: 6px;
+  margin-left: 6px;*/
+  width: 24px;
 }
-#controls a.stop:hover {
-  background-position: 0 -30px;
+#playercontrols24 a.unmuted {
+  background-position: -384px 0;
+  height: 48px;
+  width: 48px;
 }
-#controls a.prev:hover {
-  background-position: -60px -30px;
+#playercontrols24 a.muted {
+  background: url("../images/muted.png") no-repeat scroll transparent;
+  float: left;
+  height: 15px;
+  width: 16px;
 }
-#controls a.next:hover {
-  background-position: -30px -30px;
+/*#playercontrols24 a.play {
+  background-position: -90px 0;
 }
-#controls a.shuffle:hover {
-  background-position: -120px -30px;
-}
-#controls a.unshuffle:hover {
-  background-position: -150px -30px;
-}
-#controls a.repeat:hover {
-  background-position: -240px -30px;
-  margin-right: 0px;
-}
-#controls a.repeat1:hover {
-  background-position: -210px -30px;
-  margin-right: 0px;
-}
-#controls a.repeatOff:hover {
-  background-position: -180px -30px;
-  margin-right: 0px;
+#playercontrols24 a.stop {
+  background-position: 0 0;
 }*/
+#playercontrols24 a.prev {
+  background-position: -48px 0;
+}
+#playercontrols24 a.next {
+  background-position: -120px 0;
+}
+#playercontrols24 a.rewind {
+  background-position: -72px 0;
+}
+#playercontrols24 a.fastforward {
+  background-position: -96px 0;
+}
+#playercontrols24 a.shuffle {
+  background-position: -24px 0;
+}
+#playercontrols24 a.unshuffle {
+  background-position: 0 0;
+}
+#playercontrols24 a.repeat {
+  background-position: 0px 0;
+}
+#playercontrols24 a.repeat1 {
+  background-position: -96px 0;
+}
+#playercontrols24 a.repeatOff {
+  background-position: -144px 0;
+}
+#playercontrols24 a.volup {
+  background-position: -480px 0;
+}
+#playercontrols24 a.voldown {
+  background-position: -432px 0;
+}
+#playercontrols24 a.mute {
+  background-position: -384px 0;
+}
+
+/*player 32px*/
+div#controlsPlayer32 {
+  height: 32px;
+  margin-top: 8px;
+  margin-right: 5px;
+  display: inline-block;
+}
+#playercontrols32 a.button {
+  background: url("../images/player32.png") no-repeat scroll 0 0 transparent;
+  float: left;
+  height: 32px;
+  width: 32px;
+}
+#playercontrols32 a.prev {
+  background-position: 0 0;
+}
+#playercontrols32 a.next {
+  background-position: -96px 0;
+}
+#playercontrols32 a.rewind {
+  background-position: -32px 0;
+}
+#playercontrols32 a.fastforward {
+  background-position: -64px 0;
+}
+#playercontrols32 a.shuffle {
+  background-position: -128px 0;
+}
+#playercontrols32 a.unshuffle {
+  background-position: 0 0;
+}
+#playercontrols32 a.repeat {
+  background-position: -160px 0;
+}
+#playercontrols32 a.repeat1 {
+  background-position: -96px 0;
+}
+#playercontrols32 a.repeatOff {
+  background-position: -144px 0;
+}
+#playercontrols32 a.volup {
+  background-position: -480px 0;
+}
+#playercontrols32 a.voldown {
+  background-position: -432px 0;
+}
+#playercontrols32 a.mute {
+  background-position: -384px 0;
+}
+
 .playingSliderWrapper {
    /* margin: 5px 0 0;
   float: left;
@@ -2612,7 +2905,7 @@ a.music_sub.artist:hover {
   margin-left: auto;
   margin-right: auto;
   margin-top: 5px;
-  width: 94%;
+  width: 99%;
 }
 div.ui-slider {
   background-color: rgba(150,150,150,0.9);
@@ -2663,14 +2956,14 @@ div.ui-slider-vertical a.ui-slider-handle {
   width: 32px;
 }
 #volumeSlider {
-  /*margin: 10px 0 10px 40px;
-  position: fixed;
+  margin: 0 auto;
+  /*position: fixed;
   right: 215px;
   bottom: 48px;
   float: left;*/
-  position: absolute;
-  height: 53%;
-  bottom: 40px;
+  /*position: absolute;*/
+  height: 97%;
+  /*bottom: 8px;*/
   z-index: 251;
 }
 #currentlyPlaying {
